--- a/wiki/PDFExport.wiki
+++ b/wiki/PDFExport.wiki
@@ -5,6 +5,8 @@
 Mit dieser Funktion können Sie die die Rechnungen, Lieferscheine etc. als PDF Dateien exportieren. 
 Die Funktion ist im Vorgangsformular verfügbar. 
 
+verfügbar in Versionen: ab 18.02.2015
+
 
 = Installation und Verwendung =
 
